<resources>
    <string name="app_name">MarsWeather</string>
    <string name="action_settings">Settings</string>
    <string name="low">low</string>
    <string name="high">high</string>
    <string name="activityLow">Low</string>
    <string name="activityHigh">High</string>
    <string name="updated">temp updated</string>
    <string name="temUpdated">Temperature updated</string>
    <string name="mars">The planet Mars</string>
    <string name="sol">Sol</string>
    <string name="celsius_degree">\u2103</string>
    <string name="activityImgView">Martian landscape</string>
    <string name="widgetImgView">Martian landscape</string>
    <string name="refreshButtonImg">Refresh button</string>
    <string name="loading">&#8230;</string>
    <string name="space">&#160;</string>
</resources>
