<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.MainActivity">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" android:adjustViewBounds="true" android:src="@drawable/marsweatheractivity"
            android:background="@color/windowBackground" android:contentDescription="@string/activityImgView"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" android:gravity="bottom|right" android:background="@color/colorPrimary"
                android:paddingLeft="@dimen/activity_horizontal_margin" android:baselineAligned="false">
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical" android:gravity="center_vertical|right"
                    android:layout_weight="1" android:layout_gravity="center_vertical">
                <TextView
                        style="@style/CodeFont"
                        android:layout_width="wrap_content"
                        android:text="@string/mars"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp"
                        android:layout_gravity="left"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/tb_margin"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="@dimen/tb_margin">
                <ImageButton
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:id="@+id/widget_button_refresh"
                        android:background="@drawable/ic_refresh"
                        android:focusable="true"
                        android:contentDescription="@string/refreshButtonImg"/>
                <ProgressBar
                        android:id="@+id/progress_spinner"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:indeterminate="true"
                        android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin" android:layout_weight="1">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1">
                <TextView
                        style="@style/CodeFont"
                        android:layout_width="match_parent"
                        android:id="@+id/marsTime"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="48sp"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_gravity="center"/>
            </LinearLayout>
            <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" android:layout_gravity="center_horizontal">
                <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:layout_weight="1" android:paddingRight="20dp">
                        <TextView
                                style="@style/CodeFont"
                                android:layout_width="wrap_content"
                                android:text="@string/sol"
                                android:textColor="@color/colorTextPrimary"
                                android:textSize="20sp"
                                android:gravity="bottom"/>
                        <TextView
                                style="@style/CodeFont"
                                android:layout_width="0dp"
                                android:id="@+id/activityMarsSol"
                                android:textColor="@color/colorTextPrimary"
                                android:textSize="20sp"
                                android:layout_weight="1"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" android:layout_weight="1"
                            android:gravity="bottom|center_vertical" android:paddingLeft="20dp">
                        <TextView
                                style="@style/CodeFont"
                                android:layout_width="wrap_content"
                                android:id="@+id/marsMonth"
                                android:textColor="@color/colorTextPrimary"
                                android:textSize="20sp"
                                android:gravity="bottom"/>
                    </LinearLayout>
                </TableRow>
                <TableRow
                        android:gravity="clip_vertical|center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" android:layout_weight="1"
                            android:paddingRight="20dp" android:paddingTop="10dp">
                        <TextView
                                style="@style/CodeFont"
                                android:layout_width="wrap_content"
                                android:text="@string/activityLow"
                                android:textColor="@color/colorTextPrimary"
                                android:textSize="20sp"
                                android:gravity="bottom"/>
                        <TextView
                                style="@style/CodeFont"
                                android:layout_width="wrap_content"
                                android:id="@+id/min_temp_c_activity"
                                android:textColor="@color/colorTextPrimary"
                                android:textSize="24sp"
                                android:gravity="bottom"/>
                        <TextView
                                style="@style/CodeFont"
                                android:layout_width="wrap_content"
                                android:text="@string/celsius_degree"
                                android:textColor="@color/colorTextPrimary"
                                android:textSize="20sp"
                                android:gravity="bottom"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" android:layout_weight="1"
                            android:gravity="center_vertical" android:paddingLeft="20dp" android:paddingTop="10dp">
                        <TextView
                                style="@style/CodeFont"
                                android:layout_width="wrap_content"
                                android:text="@string/activityHigh"
                                android:textColor="@color/colorTextPrimary"
                                android:textSize="20sp"
                                android:gravity="bottom"/>
                        <TextView
                                style="@style/CodeFont"
                                android:layout_width="wrap_content"
                                android:id="@+id/max_temp_c_activity"
                                android:textColor="@color/colorTextPrimary"
                                android:textSize="24sp"
                                android:gravity="bottom"/>
                        <TextView
                                style="@style/CodeFont"
                                android:layout_width="wrap_content"
                                android:text="@string/celsius_degree"
                                android:textColor="@color/colorTextPrimary"
                                android:textSize="20sp"
                                android:gravity="bottom"/>
                    </LinearLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="3"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin" android:baselineAligned="false"
                android:gravity="right">
            <TextView
                    style="@style/CodeFont"
                    android:layout_width="wrap_content"
                    android:text="@string/temUpdated"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_gravity="bottom"/>
            <TextView
                    style="@style/CodeFont"
                    android:layout_width="wrap_content"
                    android:id="@+id/terrestrial_date_activity"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_gravity="bottom"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>

